feat: DockerContainer SolarDetect Backend

--- a/DeployPy/fastApi/Dockerfile
+++ b/DeployPy/fastApi/Dockerfile
@@ -1,15 +1,18 @@
-FROM python:3.11-slim
+FROM python:3.10-slim
 
 WORKDIR /app
 
-# Copiar requisitos e instalar dependências
+# Copia arquivos do projeto
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copiar código da aplicação
+# Copia código e modelo
 COPY . .
 
-# Expor a porta do FastAPI
+# Garante que o modelo está no mesmo diretório do main.py
+COPY vgg16_LR.pth /app/vgg16_LR.pth
+
+# Expõe a porta do FastAPI
 EXPOSE 8000
 
 # Comando de inicialização
