--- a/solar-detect/.gitignore
+++ b/solar-detect/.gitignore
@@ -31,4 +31,8 @@ build/
 
 ### VS Code ###
 .vscode/
-.application.yml
+mlruns
+.env
+./src/main/resources/application.yml
+src/main/resources/application.yml
+
