--- a/solar-detect-front/package.json
+++ b/solar-detect-front/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-slot": "^1.2.3",
-    "@types/react-input-mask": "^3.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
@@ -19,7 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
-    "react-input-mask": "^2.0.4",
+    "react-imask": "^7.6.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
